--- a/StockTaker/inventory/templates/base.html
+++ b/StockTaker/inventory/templates/base.html
@@ -19,6 +19,20 @@
         <div class="col-sm-2">
           {% block sidebar %}
             <ul class="sidebar-nav">
+             
+              {% if user.is_authenticated %}
+                <li><a href= "{% url 'homepage' %}">Home</a></li>
+                <li>User: {{ user.get_username }}</li>
+                <li>
+                  <form id="logout_form" method="post" action="{% url 'logout' %}">
+                    {% csrf_token %}
+                   <button type="submit" class="btn btn-link">Logout</button>      
+                  </form>
+                 </li>
+              {% else %}
+                <li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
+              {% endif %}
+
             </ul>
           {% endblock %}
         </div>
