--- a/StockTaker/inventory/templates/inventory/StockFood_detail.html
+++ b/StockTaker/inventory/templates/inventory/StockFood_detail.html
@@ -13,7 +13,7 @@
 
 {% block content %}
 
-<h1><a href = "">{{ stockfood.food }}</a></h1>
+<h1><a href = '{{ stockfood.food.get_absolute_url }}'>{{ stockfood.food }}</a></h1>
 
   <ul>
   <li>Quantity: {{ stockfood.quantity }}</li>
