--- a/StockTaker/inventory/templates/inventory/food_confirm_delete.html
+++ b/StockTaker/inventory/templates/inventory/food_confirm_delete.html
@@ -3,6 +3,10 @@
 
 {% block content %}
 
+{% if food.verified %}
+  <p>This food is used by too many users to delete.</p>
+  
+{% else %}
 <form action='' method = 'post'>
   {% csrf_token %}
 
@@ -11,6 +15,6 @@
   <input type='submit' value='Yes, delete.' />
 
 </form>
-
+{% endif %}
 
 {% endblock %}
