feat(Google-login):User accounts will be logged in through google

--- a/StockTaker/accounts/templates/registration/login.html
+++ b/StockTaker/accounts/templates/registration/login.html
@@ -31,7 +31,8 @@
     <input type="hidden" name="next" value="{{ next }}">
   </form>
 
-  {# Assumes you set up the password_reset view in your URLconf #}
+  <p><a href="{% url 'google-login' %}">Google sign in</a></p>
+
   <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
 
 {% endblock %}
