--- a/StockTaker/inventory/templates/inventory/food_confirm_delete.html
+++ b/StockTaker/inventory/templates/inventory/food_confirm_delete.html
@@ -2,19 +2,21 @@
 
 
 {% block content %}
+<section class="delete">
 
-{% if food.verified %}
-  <p>This food is used by too many users to delete.</p>
-  
-{% else %}
-<form action='' method = 'post'>
-  {% csrf_token %}
+  {% if food.verified %}
+    <p>This food is used by too many users to delete.</p>
+    
+  {% else %}
+  <form class="delete-page" action='' method = 'post'>
+    {% csrf_token %}
 
 
-  <p>Are you sure you want to delete  {{ food}}?</p>
-  <input type='submit' value='Yes, delete.' />
+    <p>Are you sure you want to delete  {{ food }}?</p>
+    <input type='submit' value='Yes, delete.' />
 
-</form>
-{% endif %}
+  </form>
+  {% endif %}
 
+</section>
 {% endblock %}
