--- a/StockTaker/inventory/templates/inventory/stockfood_confirm_delete.html
+++ b/StockTaker/inventory/templates/inventory/stockfood_confirm_delete.html
@@ -1,13 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<form action='' method='post'>
-  {% csrf_token %}
+<section class="delete">
+  <form  class="delete-page" action='' method='post'>
+    {% csrf_token %}
 
-  <p>Are you sure you want to remove {{ stockfood }}?</p>
+    <p>Are you sure you want to remove {{ stockfood }}?</p>
 
-  <input type='submit' value='Yes, delete.' />
+    <input type='submit' value='Yes, delete.' />
 
-</form>
-
+  </form>
+</section>
 {% endblock %}
