--- a/StockTaker/inventory/templates/inventory/stockinstance_confirm_delete.html
+++ b/StockTaker/inventory/templates/inventory/stockinstance_confirm_delete.html
@@ -1,15 +1,18 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<form action="" method = "post">
 
-  {% csrf_token %}
+<section class="delete">
+  <form class="delete-page" action="" method = "post">
 
-  <p>Are you sure you want to delete {{ stockinstance }}?</p>
+    {% csrf_token %}
 
-  <input type ="submit" value="Yes, delete.">
+    <p>Are you sure you want to delete {{ stockinstance }}?</p>
 
-</form>
+    <input type ="submit" value="Yes, delete.">
+
+  </form>
+</section>
 
 {% endblock %}
 
