--- a/StockTaker/inventory/templates/base.html
+++ b/StockTaker/inventory/templates/base.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     {% block title %}
@@ -6,17 +6,15 @@
     {% endblock %}
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"-->
-    <!--  rel="stylesheet"-->
-    <!--  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"-->
-    <!--  crossorigin="anonymous">-->
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles2.css' %}" />
-    <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.5/dist/htmx.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tom-select@2.3.1/dist/js/tom-select.complete.min.js"></script>
     <script src="{% static 'js/scripts.js' %}"></script>
 <link id="search-icon" rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search" />
  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
+    <!-- <link href="https://cdn.jsdelivr.net/npm/tom-select@2.3.1/dist/css/tom-select.css" rel="stylesheet"> -->
   </head>
+
   <body>
           {% block sidebar %}
       
@@ -43,25 +41,25 @@
                 </li>
 
                 <div class="pages">
-                <li><a href= "{% url 'homepage' %}">Home</a>
+                <li><a id="home" href= "{% url 'homepage' %}">Home</a>
                 </li>
                 <li class ="embedded">
-                  Foods
-                  <ul>
-                  <li><a href= "{% url 'all-foods' %}">Foods</a></li>
+                  <p>Foods</p>
+                  <ul class="nested-ul">
+                    <li><a href= "{% url 'all-foods' %}">Foods</a></li>
                   </ul>
-                  <span id ="" class="dropdown-icon material-symbols-outlined change-span">keyboard_arrow_down</span>
+                  <span class="open-nested-sidebar dropdown-icon material-symbols-outlined change-span">keyboard_arrow_down</span>
                 </li>
                 <li class ="embedded">
-                  Recipes
-                  <ul>
-                  <li><a href= "{% url 'all-recipes' %}">Recipes</a></li>
+                  <p>Recipes</p>
+                  <ul class="nested-ul">
+                    <li><a href= "{% url 'all-recipes' %}">Recipes</a></li>
                   </ul>
-                  <span id ="" class="dropdown-icon material-symbols-outlined change-span">keyboard_arrow_down</span>
+                  <span id ="recipe-open" class="open-nested-sidebar dropdown-icon material-symbols-outlined change-span">keyboard_arrow_down</span>
                 </li>
                 </div>
 
-                <li id="logout-btn" style="cursor: pointer;">Logout</li>
+                <li id="logout-btn" style="cursor: pointer;"><a href="{% url 'logout' %}">Logout</a></li>
               {% else %}
                 <li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
               {% endif %}
@@ -82,6 +80,11 @@
 
         <div class="added-links">{% block links %}{% endblock %}</div>
 
+        <a href="#" id="scroll-top">
+            <span class="material-symbols-outlined">
+            keyboard_control_key
+            </span>
+        </a>
 </main>
           
   </body>
