--- a/StockTaker/inventory/templates/base.html
+++ b/StockTaker/inventory/templates/base.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="{% static 'css/styles2.css' %}" />
     <script src="https://cdn.jsdelivr.net/npm/tom-select@2.3.1/dist/js/tom-select.complete.min.js"></script>
     <script src="{% static 'js/scripts.js' %}"></script>
+<script src="https://unpkg.com/htmx.org@1.9.12"></script>
 <link id="search-icon" rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search" />
  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
-    <!-- <link href="https://cdn.jsdelivr.net/npm/tom-select@2.3.1/dist/css/tom-select.css" rel="stylesheet"> -->
   </head>
 
   <body>
