--- a/StockTaker/inventory/templates/inventory/Food_list.html
+++ b/StockTaker/inventory/templates/inventory/Food_list.html
@@ -18,7 +18,7 @@
       {% for food in food_list %}
         <li>
           <section id="stockfood-detail">
-            <article class="dialog-container detail-dialog">
+            <article class="dialog-container detail-dialog" data-img-url={{ food.image }}>
               <aside class="header-info">
                 <h1>{{ food.name }}</h1>
 
