--- a/StockTaker/inventory/templates/inventory/Food_list.html
+++ b/StockTaker/inventory/templates/inventory/Food_list.html
@@ -19,7 +19,7 @@
         <li>
           <section id="stockfood-detail">
             <article class="dialog-container detail-dialog" data-img-url={{ food.image }}>
-              <aside class="header-info">
+              <aside class="food-header header-info">
                 <h1>{{ food.name }}</h1>
 
                 {% if food.user == request.user %}
